Fixed navbar width

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div style="text-align:center;">
-<embed src="/navbar.swf" style="width:760px;height:130px;">
+<embed src="/navbar.swf" style="width:100%;height:130px;">
 </div>
 </body>
 </html>
